# ethminer_xilinx

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  ethminer.cbp
ethminer/: CMakeLists.txt  Makefile  buildinfo.h  cmake_install.cmake  main.cpp
libapicore/: Makefile  cmake_install.cmake
libdevcore/: Makefile  cmake_install.cmake
libethash-cuda/: Makefile  cmake_install.cmake  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu
libethash-xcl/: CMakeLists.txt  Makefile  XCLMiner.cpp  XCLMiner.h  cmake_install.cmake
libethash-xcl/kernel/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  connectivity_u50.ini  ethash_generate_dag-compile.cfg  generate_dag-compile.cfg  guidance.html  guidance.json  guidance.pb  makefile  test_kernel_crc-compile.cfg  test_kernel_lookup_number_for_hash-compile.cfg
libethash-xcl/kernel/src/: ethminer_definitions.h  ethminer_hashing.cpp  ethminer_kernel.cpp  ethminer_kernel.hpp  ethminer_kernel_dag.cpp  ethminer_kernel_dag.hpp  ethminer_kernel_search.cpp  ethminer_kernel_search.hpp  unsued_kernel_stuff.h  xcl2.hpp
libethash-xcl/src/: ethminer_kernel.cpp  ethminer_kernel.hpp
libethash-xcl/xcl/: xcl2.cpp  xcl2.hpp
libethcore/: Farm.cpp  Farm.h  Makefile  Miner.h  cmake_install.cmake
libhwmon/: Makefile  cmake_install.cmake
libpoolprotocols/: Makefile  cmake_install.cmake
